trying to add some tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,13 +11,22 @@ Depends:
 Imports:
 	CohortDiagnostics (>= 3.0.2),
 	CohortGenerator (>= 0.5.0),
+  dplyr,
+	FeatureExtraction,
 	OhdsiSharing,
+  rlang,
 	ParallelLogger,
   PhenotypeLibrary (>= 3.1.2)
+Suggest:
+  Eunomia,
+  testthat,
+  withr
 Remotes:
-  ohdsi/PhenotypeLibrary,
   ohdsi/CohortGenerator,
-  ohdsi/CohortDiagnostics
+  ohdsi/CohortDiagnostics,
+  ohdsi/Eunomia,
+  ohdsi/FeatureExtraction,
+  ohdsi/PhenotypeLibrary
 License: Apache License 2.0
 LazyData: TRUE
 RoxygenNote: 7.2.0
