--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,10 @@ Imports:
 	CohortGenerator (>= 0.5.0),
 	OhdsiSharing,
 	ParallelLogger,
-  PhenotypeLibrary (>= 3.1.2)
+  PhenotypeLibrary (>= 3.1.2),
+  FeatureExtraction,
+  dplyr,
+  rlang
 Remotes:
   ohdsi/PhenotypeLibrary,
   ohdsi/CohortGenerator,
