--- a/.github/workflows/TestStudyPackage.yaml
+++ b/.github/workflows/TestStudyPackage.yaml
@@ -46,6 +46,11 @@ jobs:
         with:
           cache-version: 1
           
+      - name: Install rcmdcheck
+        run: |
+          install.packages('rcmdcheck')
+        shell: Rscript {0}
+          
       - uses: r-lib/actions/check-r-package@v2
         with:
           args: 'c("--no-manual")'
