--- a/.github/workflows/TestStudyPackage.yaml
+++ b/.github/workflows/TestStudyPackage.yaml
@@ -45,7 +45,16 @@ jobs:
       - uses: r-lib/actions/setup-renv@v2
         with:
           cache-version: 1
-
+          
+      - name: Install rcmdcheck
+        run: |
+          install.packages('rcmdcheck')
+        shell: Rscript {0}
+          
+      - uses: r-lib/actions/check-r-package@v2
+        with:
+          args: 'c("--no-manual")'
+          error-on: '"warning"'
 
 
   Release:
