--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,9 +16,9 @@ Imports:
   jsonlite,
   OhdsiSharing,
   ParallelLogger,
-  PhenotypeLibrary (>= 3.1.2),
   rlang,
-  utils
+  utils,
+  PhenotypeLibrary (>= 3.1.2)
 Suggests:
   Eunomia,
   testthat
