--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,11 +15,13 @@ Imports:
   FeatureExtraction,
   jsonlite,
   OhdsiSharing,
-  rlang,
-  testthat,
-  utils,
   ParallelLogger,
+  rlang,
+  utils,
   PhenotypeLibrary (>= 3.1.2)
+Suggests:
+  Eunomia,
+  testthat
 Remotes:
   ohdsi/CohortGenerator,
   ohdsi/CohortDiagnostics,
@@ -28,4 +30,5 @@ Remotes:
   ohdsi/PhenotypeLibrary
 License: Apache License 2.0
 LazyData: TRUE
+Encoding: UTF-8
 RoxygenNote: 7.2.0
