--- a/.github/workflows/TestStudyPackage.yaml
+++ b/.github/workflows/TestStudyPackage.yaml
@@ -51,7 +51,7 @@ jobs:
           install.packages('rcmdcheck')
         shell: Rscript {0}
           
-      # - uses: r-lib/actions/check-r-package@v2
+      - uses: r-lib/actions/check-r-package@v2
         with:
           args: 'c("--no-manual")'
           error-on: '"warning"'
