Comment out uses: r-lib/actions/check-r-package@v2
https://github.com/ohdsi-studies/PhenotypeLibraryDiagnostics/issues/8

--- a/.github/workflows/TestStudyPackage.yaml
+++ b/.github/workflows/TestStudyPackage.yaml
@@ -51,10 +51,10 @@ jobs:
           install.packages('rcmdcheck')
         shell: Rscript {0}
           
-      - uses: r-lib/actions/check-r-package@v2
-        with:
-          args: 'c("--no-manual")'
-          error-on: '"warning"'
+      # - uses: r-lib/actions/check-r-package@v2
+      #   with:
+      #     args: 'c("--no-manual")'
+      #     error-on: '"warning"'
 
 
   Release:
