--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,35 @@
 Package: PhenotypeLibraryDiagnostics
 Type: Package
 Title: Generating Cohort Diagnostics for the OHDSI Phenotype Library
-Version: 3.1.2
-Date: 2022-07-09
+Version: 3.1.3
+Date: 2022-07-19
 Author: Gowtham Rao [aut, cre]
 Maintainer: Gowtham Rao <rao@ohdsi.org>
 Description: Generating cohort diagnostics for the cohort definitions in the OHDSI Phenotype Library.
 Depends:
     DatabaseConnector (>= 5.0.0)
 Imports:
-	CohortDiagnostics (>= 3.0.2),
-	CohortGenerator (>= 0.5.0),
-	OhdsiSharing,
-	ParallelLogger,
-  PhenotypeLibrary (>= 3.1.2)
+  CohortDiagnostics (>= 3.0.2),
+  CohortGenerator (>= 0.5.0),
+  dplyr,
+  FeatureExtraction,
+  jsonlite,
+  OhdsiSharing,
+  ParallelLogger,
+  rlang,
+  utils,
+  PhenotypeLibrary (>= 3.1.3)
+Suggests:
+  Eunomia,
+  renv,
+  testthat
 Remotes:
-  ohdsi/PhenotypeLibrary,
   ohdsi/CohortGenerator,
-  ohdsi/CohortDiagnostics
+  ohdsi/CohortDiagnostics,
+  ohdsi/Eunomia,
+  ohdsi/FeatureExtraction,
+  ohdsi/PhenotypeLibrary
 License: Apache License 2.0
 LazyData: TRUE
+Encoding: UTF-8
 RoxygenNote: 7.2.0
